# my_project

./: .gitignore  README.md  config.yaml  connection.yaml  data_generator.py  error_log.txt  main copy.py  main.py  old_code_test.py  settings.yaml  test.py
DummyGenerator/: .gitignore  README.md  connection.yaml  main.py  pyproject.toml
DummyGenerator/config/server1/: airportdb.yaml  dummydb.yaml
DummyGenerator/config/server2/: mydb.yaml
DummyGenerator/utils/: data_generator.py  db_setup.py  db_utils.py
Migrator/: Migrator.py  README.md
Migrator/config/: config.yaml
config/: airportdb.yaml  connection.yaml  dummydb.yaml  settings.yaml
mysqlddl/: 2th_ddl.sql
utils/: data_generator.py  db_setup.py  db_utils.py  insert_data.py
